simplify pom - integration tests fail anyway ...