@@ -334,68 +334,6 @@
           </execution>
         </executions>
       </plugin>
-
-
-      <!-- Sonar -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>${jacoco.agent.ut.arg}</argLine>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>integration-test</id>
-            <phase>integration-test</phase>
-            <goals>
-              <goal>integration-test</goal>
-            </goals>
-            <configuration>
-              <runOrder>alphabetical</runOrder>
-              <argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.awt.headless=true ${jacoco.agent.it.arg}</argLine>
-              <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.1.201405082137</version>
-        <executions>
-          <!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info to be passed to the JVM hosting the code
-    being tested. -->
-          <execution>
-            <id>prepare-ut-agent</id>
-            <phase>process-test-classes</phase>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-            <configuration>
-              <destFile>${sonar.jacoco.reportPath}</destFile>
-              <propertyName>jacoco.agent.ut.arg</propertyName>
-              <append>true</append>
-            </configuration>
-          </execution>
-          <!-- Prepares a variable, jacoco.agent.it.arg, that contains the info to be passed to the JVM hosting the code
-    being tested. -->
-          <execution>
-            <id>prepare-it-agent</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-            <configuration>
-              <destFile>${sonar.jacoco.itReportPath}</destFile>
-              <propertyName>jacoco.agent.it.arg</propertyName>
-              <append>true</append>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
 </project>
